gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: cluster-gateway
  namespace: istio-system
  
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "sample-app.com"
    - "grafana.com"
    - "prometheus.com"
